--- a/redSocial/src/redsocial/Interfaz.form
+++ b/redSocial/src/redsocial/Interfaz.form
@@ -194,6 +194,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Enlazar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="enlazarActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="200" y="370" width="-1" height="-1"/>
