--- a/redSocial/src/redsocial/Interfaz.form
+++ b/redSocial/src/redsocial/Interfaz.form
@@ -73,6 +73,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Mostrar grafo"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mostrarGrafoActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="270" y="130" width="-1" height="-1"/>
